fix: Fix pager clipping

--- a/frontend/src/assets/global.scss
+++ b/frontend/src/assets/global.scss
@@ -138,7 +138,6 @@ $navbarHeight: 3.2rem;
 }
 
 a {
-  display: inline-block;
   color: rgba(var(--color-secondary-rgb), 0.9);
   text-decoration: none;
   transition: transform ease-in-out 0.2s;
